signup page form alignment fixed

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -133,17 +133,18 @@
         @include desktop {
           // @include rem(width, 90%);
           width: 90%;
-          padding: 20px 10px;
+          // padding: 20px 10px;
+          height: 40px;
         }
         @include tablet {
           // @include rem(width, 90%);
           width: 90%;
-          padding: 20px 10px;
+          height: 40px;
         }
         @include mobile {
           // @include rem(width, 90%);
           width: 90%;
-          padding: 20px 10px;
+          height: 40px;
         }
       }
     }
